@@ -41,6 +41,13 @@ if (version_compare(PHP_VERSION, '5.2.0', 'lt')) {
 }
 
 /**
+  * Backward compatibility for PHP 5.2
+  */
+if (!defined('E_DEPRECATED')) {
+    define('E_DEPRECATED', 8192);
+}
+
+/**
  * the error handler
  */
 require_once './libraries/Error_Handler.class.php';
